Added 402 error from Kinopoisk API handling

--- a/server/.golangci.yml
+++ b/server/.golangci.yml
@@ -69,6 +69,10 @@ issues:
       text: should rewrite http.NewRequestWithContext
       linters:
         - noctx
+    - path: pkg/utils/time\.go
+      text: "Magic number: 24, in <argument> detected"
+      linters:
+        - mnd
 
   fix: false
 
