Fixed nginx deploy bugs

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -57,5 +57,5 @@ http {
     # Limit connection count per second for one ip settings
     limit_req_zone  $binary_remote_addr zone=req_limit_per_ip:10m rate=20r/s;
 
-    include /etc/nginx/conf.d/http-site.conf;
+    include /etc/nginx/conf.d/http_site.conf;
 }
