--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     image: redis/redis-stack-server:6.2.6-v15
     container_name: filmer_redis
     restart: always
-    ports:
-      - "6380:6379"
+    expose:
+      - "6379"
     networks:
       filmer_network:
 
@@ -15,7 +15,8 @@ services:
       - cockroach_data:/cockroach/cockroach-data:rw
     expose:
       - "26257"
-      - "8080"
+    ports:
+      - "8801:8080"
     networks:
       filmer_network:
     command: "start-single-node --insecure"
@@ -46,7 +47,7 @@ services:
     container_name: filmer_nginx
     restart: always
     expose:
-      "8050"
+      - "8050"
     networks:
       filmer_network:
     depends_on:
