Changed nginx setup

--- a/nginx/http_site.conf
+++ b/nginx/http_site.conf
@@ -5,9 +5,9 @@ upstream backend {
 
 server {
     # внешний входящий порт
-    listen 8050;
+    listen 80;
     # имя этого сервера
-    server_name 79.137.204.172;
+    server_name nginx;
 
     # перенаправление на REST API
     location /api/{
