Enabled prefork && Fixed many main entrypoints

--- a/nginx/http_site.conf
+++ b/nginx/http_site.conf
@@ -5,7 +5,7 @@ upstream backend {
 
 server {
     # внешний входящий порт
-    listen 80;
+    listen 80 reuseport;
     # имя этого сервера
     server_name nginx;
 
