--- a/nginx/http_site.conf
+++ b/nginx/http_site.conf
@@ -1,6 +1,9 @@
 upstream backend {
     server server:3000;
 }
+upstream frontend {
+    server client:3001;
+}
 
 
 server {
@@ -10,7 +13,12 @@ server {
     server_name nginx;
 
     # перенаправление на REST API
-    location /api/{
+    location /api/ {
         proxy_pass http://backend;
+    }
+
+    # перенаправление на клиента
+    location / {
+        proxy_pass http://frontend;
     }
 }
