--- a/nginx/http_site.conf
+++ b/nginx/http_site.conf
@@ -8,7 +8,7 @@ upstream frontend {
 
 server {
     # внешний входящий порт
-    listen 80 reuseport;
+    listen 80;
     # имя этого сервера
     server_name nginx;
 
