Remove nginx proxy to API

--- a/nginx/http_site.conf
+++ b/nginx/http_site.conf
@@ -1,9 +1,11 @@
-upstream backend {
-    server server:3000;
-}
+# client
 upstream frontend {
     server client:3001;
 }
+# REST API (dev)
+#upstream backend {
+#    server server:3000;
+#}
 
 
 server {
@@ -12,10 +14,10 @@ server {
     # имя этого сервера
     server_name nginx;
 
-    # перенаправление на REST API
-    location /api/ {
-        proxy_pass http://backend;
-    }
+    # перенаправление на REST API (dev)
+    #location /api/ {
+    #    proxy_pass http://backend;
+    #}
 
     # перенаправление на клиента
     location / {
