Added nginx docs

--- a/nginx/http_site.conf
+++ b/nginx/http_site.conf
@@ -9,17 +9,17 @@ upstream frontend {
 
 
 server {
-    # внешний входящий порт
+    # external listening port
     listen 80;
-    # имя этого сервера
+    # server domain (ip)
     server_name nginx;
 
-    # перенаправление на REST API (dev)
+    # forward to REST API (dev)
     #location /api/ {
     #    proxy_pass http://backend;
     #}
 
-    # перенаправление на клиента
+    # forward to client
     location / {
         proxy_pass http://frontend;
     }
