Removed path prefix from server

--- a/nginx/http_site.conf
+++ b/nginx/http_site.conf
@@ -20,6 +20,11 @@ server {
     #}
 
     # forward to client
+    location = / {
+        proxy_pass http://frontend/filmer;
+    }
+
+    # forward to client
     location / {
         proxy_pass http://frontend;
     }
