Added server log rotation and redis cache for search movies resource

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -24,14 +24,15 @@ RUN go build -o ./app_server ./cmd/app/main.go
 
 FROM alpine:3.20 AS run
 
-# make dir for logs
-RUN mkdir /logs
-
 WORKDIR /app
+# make dir for logs
+RUN mkdir /app/logs
+ENV LOG_DIR /app/logs
+
 # copy compiled file, files for swagger and wallet data
 COPY --from=build /go/src/app_server .
 COPY --from=build /go/src/migrations ./migrations
 COPY --from=build /go/src/docs ./docs
 
 # run app
-CMD ["/bin/sh", "-c", "/app/app_server 2>> /logs/error-log.log"]
+CMD ["/bin/sh", "-c", "/app/app_server"]
