--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     expose:
       - "3000"
     volumes:
-      - server_logs:/logs:rw
+      - server_logs:/app/logs:rw
     networks:
       main_network:
     depends_on:
