Fixed rabbit network settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq:rw
     networks:
-      filmer_network:
+      main_network:
 
   server:
     build:
